[tool.poetry]
name = "aello"
version = "1.0.0"
homepage = "https://github.com/oscarmcm/aello"
description = "Simple CLI tool for KeePass"
readme = "README.md"
authors = ["Oscar Cortez <om.cortez.2010@gmail.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[tool.poetry.scripts]
aello = "aello.main:app"

[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.0.0"
typing-extensions = { version = "^3.10.0", python = "<3.8" }
typer = "^0.4.1"
pykeepass = "^4.0.1"
textual = "^0.1.17"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | env
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
line_length=79
multi_line_output=5
include_trailing_comma=true

